/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package darksouls3;

/**
 *
 * @author lleshi.alessandro
 */
public class Barbarian extends Character{
    
    public Barbarian(int mana, int stamina, String name, int life, int baseAtt) {
        super(mana, stamina, name, life, baseAtt);
    }


    @Override
    //modalità berserk
    public void specialAbility(Villain v) {
        if(life <= 10){
            v.setLife(0);
        }
    }
    
}
