/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package darksouls3;

/**
 *
 * @author aless
 */
public class GameManager {
    
    
    
    
    
    /*
    //NEW BOSS
    public boolean newBoss(){
        return true;
    }
    //ITEM FOUND
    public void itemFound(Character c, Item i){
        c.inv.addItem(i);
    }
    //NEW LOCATION
    public boolean newLocation(){
        return true;
    }
    //NEW NPC
    public NPC newNPC(NPC n){
        return n;
    }
    //RESTORE HEALS
    public void restoreHeals(Character c){
        c.inv.numberAshenEstus = 3;
        c.inv.numberEstus = 3;
        c.inv.greenBlossom = 3;
    }
    
    */
}
